--- a/responsive.css
+++ b/responsive.css
@@ -5,14 +5,17 @@
         flex-direction: column;
         padding: 20px;
     }
+
     nav {
         flex-direction: column;
         align-items: center;
     }
+
     nav a {
         margin: 10px 0;
         font-size: 1em;
     }
+
     #dark-mode-toggle {
         right: 8px;
         top: 17px;
@@ -23,34 +26,62 @@
     main {
         padding: 100px 10px;
     }
+
     section {
         padding: 30px;
     }
+
     h2 {
         font-size: 1.5em;
     }
-    p, ul {
+
+    p,
+    ul {
         font-size: 0.9em;
     }
+
     #dark-mode-toggle {
         padding: 8px 16px;
         font-size: 0.7em;
     }
+    .back-button {
+        padding: 8px 16px; /* Réduire le padding pour les petits écrans */
+        font-size: 14px; /* Réduire la taille de la police */
+      }
+    
+      .fa-arrow-left {
+        margin-right: 8px; /* Réduire l'espace entre l'icône et le texte */
+      }
 }
 
 @media (max-width: 480px) {
     header h1 {
         font-size: 1.5em;
     }
+
     nav a {
         font-size: 0.8em;
     }
+
     section {
         padding: 20px;
     }
-    #windForm input, #windForm button {
+
+    #windForm input,
+    #windForm button {
         width: 100%;
         margin-bottom: 6px;
     }
+    .back-button {
+        padding: 6px 12px; /* Encore plus petit pour les très petits écrans */
+        font-size: 12px; /* Taille de police plus petite */
+      }
+    
+      .button-text {
+        display: none; /* Masquer le texte sur les très petits écrans */
+      }
+    
+      .fa-arrow-left {
+        margin-right: 0; /* Supprimer l'espace si le texte est masqué */
+      }
 }
-
