--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     align-items: center;
     scroll-behavior: smooth;
 }
+
 header {
     background-color: #444343;
     color: #fff;
@@ -22,23 +23,28 @@ header {
     z-index: 1000;
     transition: transform 0.3s ease-in-out, padding 0.3s ease-in-out;
 }
+
 header.compact {
     padding: 10px 0;
     transform: translateY(-60px);
 }
+
 h1 {
     font-size: 2.5em;
     margin: 0;
     font-weight: 400;
     transition: opacity 0.3s ease-in-out;
 }
+
 header.compact h1 {
     opacity: 0;
     visibility: hidden;
 }
+
 nav {
     margin-top: 20px;
 }
+
 nav a {
     text-decoration: none;
     color: #fff;
@@ -48,10 +54,12 @@ nav a {
     border-radius: 30px;
     transition: background-color 0.3s, color 0.3s;
 }
+
 nav a:hover {
     background-color: #fff;
     color: #000;
 }
+
 main {
     max-width: 1200px;
     margin: 0 auto;
@@ -59,17 +67,19 @@ main {
     width: 100%;
     gap: 60px;
 }
+
 section {
     padding: 60px;
     margin-bottom: 60px !important;
     background-color: #f5f5f7;
     border-radius: 20px;
-    transition: box-shadow 0,2s ease;
+    transition: box-shadow 0, 2s ease;
 }
 
 section:hover {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
+
 h2 {
     font-size: 2.2em;
     margin-bottom: 20px;
@@ -77,22 +87,28 @@ h2 {
     color: #000;
     font-weight: 500;
 }
-p, ul {
+
+p,
+ul {
     font-size: 1.1em;
     color: #666;
     text-align: center;
 }
+
 ul {
     list-style: none;
     padding: 0;
 }
+
 ul li {
     padding: 10px 0;
 }
+
 .socials {
     text-align: center;
     margin-top: 30px;
 }
+
 .socials a {
     text-decoration: none;
     color: #000;
@@ -100,10 +116,12 @@ ul li {
     font-size: 1.7em;
     transition: color 0.3s ease, transform 0.3s ease;
 }
+
 .socials a:hover {
     color: #4a90e2;
     transform: scale(1.1);
 }
+
 footer {
     text-align: center;
     padding: 30px 0;
@@ -113,6 +131,7 @@ footer {
     margin-top: 30px;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 footer p {
     margin: 0;
     font-size: 1em;
@@ -133,6 +152,7 @@ footer p {
     right: 20px;
     z-index: 1001;
 }
+
 #dark-mode-toggle:hover {
     background-color: #357ABD;
     transform: scale(1.1);
@@ -145,7 +165,8 @@ body.dark-mode {
     color: #ffffff;
 }
 
-header.dark-mode, footer.dark-mode {
+header.dark-mode,
+footer.dark-mode {
     background-color: #1f1f1f;
     color: #ffffff;
     border-top-color: rgba(255, 255, 255, 0.1);
@@ -167,14 +188,17 @@ section.dark-mode {
     color: #ffffff;
     border: 1px solid #4a90e2;
 }
-input.dark-mode{
+
+input.dark-mode {
     color: #333;
 }
+
 #windForm button.dark-mode {
     background-color: #357ABD;
     color: #ffffff;
 }
-strong.dark-mode{
+
+strong.dark-mode {
     color: #ffffff;
 }
 
@@ -192,53 +216,61 @@ strong.dark-mode{
 }
 
 /* Dark mode for all sections */
-h1.dark-mode, h2.dark-mode, p.dark-mode, ul li.dark-mode {
+h1.dark-mode,
+h2.dark-mode,
+p.dark-mode,
+ul li.dark-mode {
     color: #ffffff;
 }
+
 #progress-bar {
-position: fixed;
-top: 0;
-left: 0;
-width: 0%;
-height: 5px;
-background-color: pink;
-z-index: 1001;
-transition: width 0.1s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 5px;
+    background-color: pink;
+    z-index: 1001;
+    transition: width 0.1s ease;
 }
+
 #skills {
     width: 100%;
     max-width: 1200px;
     margin: auto;
-  }
-  
-  #skills h2 {
+}
+
+#skills h2 {
     font-size: 24px;
     text-align: center;
-  }
-  
-  #skills p {
+}
+
+#skills p {
     text-align: center;
     font-size: 16px;
     color: #666;
-  }
-  
-  .dark-mode #skills p {
-    color: #fff; /* Couleur du texte en mode sombre */
 }
-  #skills ul {
+
+.dark-mode #skills p {
+    color: #fff;
+    /* Couleur du texte en mode sombre */
+}
+
+#skills ul {
     list-style: none;
     padding: 0;
-  }
-  
-  #skills li {
+}
+
+#skills li {
     margin: 15px 0;
     font-weight: bold;
-  }
-  
-  .progress-bar {
+}
+
+.progress-bar {
     position: relative;
     width: 100%;
-    height: 20px; /* Hauteur de la barre */
+    height: 20px;
+    /* Hauteur de la barre */
     background-color: #e0e0e0;
     border-radius: 5px;
     overflow: hidden;
@@ -248,33 +280,57 @@ transition: width 0.1s ease;
 
 .progress {
     height: 100%;
-    background-color: #4caf50; /* Couleur de la progression */
+    background-color: #4caf50;
+    /* Couleur de la progression */
     transition: width 0.3s ease-in-out;
 }
 
 .progress.html {
-    width: 75%; /* Largeur correspondant au pourcentage */
+    width: 75%;
+    /* Largeur correspondant au pourcentage */
 }
 
 .progress-percentage {
     position: absolute;
-    right: 10px; /* Distance du bord droit */
-    color: #333; /* Couleur du texte */
+    right: 10px;
+    /* Distance du bord droit */
+    color: #333;
+    /* Couleur du texte */
     font-size: 14px;
     font-weight: bold;
-    line-height: 20px; /* Alignement vertical */
+    line-height: 20px;
+    /* Alignement vertical */
 }
 
-  
-  .html { background-color: rgb(124, 120, 121); width: 75%; } /* Niveau 90% */
-  .css { background-color: rgb(124, 120, 121); width: 80%; }  /* Niveau 80% */
-  .javascript { background-color: rgb(124, 120, 121); width: 60%; } /* Niveau 70% */
-  .other-skill { background-color: rgb(124, 120, 121); width: 90%; } 
-  
- img{
+
+.html {
+    background-color: rgb(124, 120, 121);
+    width: 75%;
+}
+
+/* Niveau 90% */
+.css {
+    background-color: rgb(124, 120, 121);
+    width: 80%;
+}
+
+/* Niveau 80% */
+.javascript {
+    background-color: rgb(124, 120, 121);
+    width: 60%;
+}
+
+/* Niveau 70% */
+.other-skill {
+    background-color: rgb(124, 120, 121);
+    width: 90%;
+}
+
+img {
     border-radius: 50%;
-  }
-  #contact {
+}
+
+#contact {
     text-align: center;
     padding: 40px 20px;
 }
@@ -330,15 +386,18 @@ transition: width 0.1s ease;
         flex-direction: column;
         align-items: stretch;
     }
+
     #windForm input,
     #windForm button {
         width: 100%;
         max-width: none;
     }
 }
-strong{
+
+strong {
     color: #333;
 }
+
 /* Style de la transition de zoom et fondu */
 .fade-zoom {
     position: fixed;
@@ -376,11 +435,13 @@ strong{
         transform: translate(0, 0) scale(0.5);
         opacity: 1;
     }
+
     100% {
         transform: translate(calc(-50px + 100px * var(--x)), calc(-50px + 100px * var(--y))) scale(1);
         opacity: 0;
     }
 }
+
 /* Style général du bouton */
 .back-button {
     position: fixed;
@@ -401,7 +462,8 @@ strong{
 }
 
 .back-button .button-text {
-    display: none; /* Cacher le texte par défaut */
+    display: none;
+    /* Cacher le texte par défaut */
     margin-left: 10px;
     font-size: 16px;
     opacity: 0;
@@ -417,9 +479,12 @@ strong{
 /* Lorsque le bouton est survolé, agrandir et afficher le texte */
 .back-button:hover {
     background-color: #333;
-    width: auto; /* Ajuster la taille */
-    padding: 10px 20px; /* Ajoute de l'espace pour le texte */
-    border-radius: 25px; /* Pour avoir des coins arrondis */
+    width: auto;
+    /* Ajuster la taille */
+    padding: 10px 20px;
+    /* Ajoute de l'espace pour le texte */
+    border-radius: 25px;
+    /* Pour avoir des coins arrondis */
 }
 
 .back-button:hover .button-text {
@@ -428,23 +493,31 @@ strong{
 }
 
 .back-button:hover i {
-    opacity: 0; /* Masquer l'icône */
+    opacity: 0;
+    /* Masquer l'icône */
 }
+
 a {
-    color: inherit; /* Maintient la couleur du texte existant */
-    text-decoration: underline; /* Empêche la ligne sous le texte */
+    color: inherit;
+    /* Maintient la couleur du texte existant */
+    text-decoration: underline;
+    /* Empêche la ligne sous le texte */
 }
 
 a:hover {
-    color: inherit; /* Garde la même couleur au survol */
-    text-decoration: underline; /* Enlève la décoration sous le texte */
+    color: inherit;
+    /* Garde la même couleur au survol */
+    text-decoration: underline;
+    /* Enlève la décoration sous le texte */
 }
+
 /* Animation fade-in */
 @keyframes fadeIn {
     from {
         opacity: 0;
         transform: translateY(20px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -455,6 +528,7 @@ a:hover {
     opacity: 0;
     transition: opacity 0.5s ease;
 }
+
 #contact.visible {
     opacity: 1;
     animation: fadeIn 0.5s ease;
@@ -502,6 +576,7 @@ a:hover {
         display: block;
     }
 }
+
 button {
     background-color: #3498db;
     color: white;
@@ -511,7 +586,8 @@ button {
     cursor: pointer;
     border-radius: 30px;
     align-items: right;
-  }
-  button:hover {
+}
+
+button:hover {
     background-color: #2874a6;
-  }
+}
